# get_avg

./: Cargo.toml  README.md  Rustfmt.toml
src/: helper.rs  input.rs  lib.rs  main.rs
src/modules/: helper.rs  input.rs  mod.rs  prompts.rs
